<resources>
    <string name="app_name">Ολυμπιακοί Αγώνες</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ολυμπιακοί Αγώνες</string>
    <string name="nav_header_subtitle">prohgmenaThemataAllilepidrasis.Team58@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Αρχική</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="sport">Άθλημα</string>
    <string name="athlete">Αθλητής</string>
    <string name="team">Ομάδα</string>
    <string name="games">Παιχνίδια</string>

    <string name="app_info">Πληροφορίες Εφαρμογής</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="insert">Εισαγωγή</string>
    <string name="update">Τροποποίηση</string>
    <string name="delete">Διαγραφή</string>
    <string name="view">Προβολή</string>
    <string name="omadika">Προβολη Ομαδικων</string>
    <string name="atomika">Προβολη Ατομικων</string>

    <string-array name="Greeknames">
        <item>test1</item>
        <item>test2</item>
        <item>test3</item>
    </string-array>
    <string name="noti_app_name">WCG Notification</string>



    <string name="channel_name">Test Channel 1</string>
    <string name="channel_description">This is a test channel at level a high level, where lights, sound, and vibration are active.</string>

    <string-array name="queries_array">
        <item> Athletes Males Names</item>
        <item> Name From Greek Team</item>
        <item> Solo Athlete Name</item>
        <item> Athlete Name From Greek Teams</item>
        <item> Greek Athletes Names From Thessaloniki</item>

    </string-array>

    <string-array name="queries_description_array">
        <item> 1. Athletes Males Names.</item>
        <item> 2. Name From Greek Team</item>
        <item> 3. Solo Athletes Names</item>
        <item> 4. Athlete Name From Greek Teams</item>
        <item> 5. Greek Athletes Names From Thessaloniki</item>

    </string-array>

</resources>